commenting out doublet finder package

--- a/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
+++ b/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
@@ -16,7 +16,7 @@ suppressPackageStartupMessages({
   library(sctransform)
   library(rgl)
   library(patchwork)
-  library(DoubletFinder)
+  # library(DoubletFinder)
   library(ggrepel)
   library(ggpubr)
   library(dplyr) 
@@ -34,7 +34,7 @@ suppressPackageStartupMessages({
   library(Hmisc)
   library(rmarkdown)
   library(RColorBrewer)
-  library(Platypus)
+  # library(Platypus)
   library(ggvenn)
   library(conflicted)
   library(SoupX)
